# recipebox

./: db.sqlite3  pyproject.toml
recipeapp/: admin.py  forms.py  models.py  views.py
recipeapp/migrations/: 0001_initial.py  0002_profile.py
recipebox/: settings.py  urls.py
templates/: author_detail.html  error.html  index.html  recipe_detail.html
