[tool.poetry]
name = "recipebox"
version = "0.1.0"
description = "A box of recipies"
authors = ["Andrew Fillenwarth <andyf016@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
